[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
byteorder = "1.4.3"
lazy_static = "1.4.0"
rayon = "1.5.1"

[workspace]

members = [
  "fingertips",
]
