[package]
name = "async-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
async-std = { version = "1.10.0", features = ["unstable"]}
crossbeam = "0.8.1"
futures-lite = "1.12.0"
surf = "2.3.2"
waker-fn = "1.1.0"
